fix countries mistakes

--- a/preprocessing/Dynamic_dataset/clean_job_ads.ipynb
+++ b/preprocessing/Dynamic_dataset/clean_job_ads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "871cce30",
    "metadata": {},
    "outputs": [],
@@ -46,208 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "f01252ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rows in the dataset: 14769\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Primary Description</th>\n",
-       "      <th>Detail URL</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Skill</th>\n",
-       "      <th>Insight</th>\n",
-       "      <th>Job State</th>\n",
-       "      <th>Poster Id</th>\n",
-       "      <th>Company Name</th>\n",
-       "      <th>Company Logo</th>\n",
-       "      <th>Created At</th>\n",
-       "      <th>Scraped At</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Inhouse Consultant Information Security Awaren...</td>\n",
-       "      <td>About Us\\nAs a self-financed family company, w...</td>\n",
-       "      <td>Deichmann · Essen, North Rhine-Westphalia, Ger...</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/4300643770</td>\n",
-       "      <td>Essen, North Rhine-Westphalia, Germany</td>\n",
-       "      <td>Skills: Information Security, Phishing, +8 more</td>\n",
-       "      <td></td>\n",
-       "      <td>LISTED</td>\n",
-       "      <td>714127132</td>\n",
-       "      <td>Deichmann</td>\n",
-       "      <td>https://media.licdn.com/dms/image/v2/C560BAQHX...</td>\n",
-       "      <td>2025-09-18T11:14:09.000Z</td>\n",
-       "      <td>2025-09-29T11:53:40.552Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Senior Storage Engineer</td>\n",
-       "      <td>Vattenfall IT’s Data Centre department manages...</td>\n",
-       "      <td>Vattenfall · Stockholm, Stockholm County, Swed...</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/4279274865</td>\n",
-       "      <td>Stockholm, Stockholm County, Sweden</td>\n",
-       "      <td>Skills: English, Data Centers, +8 more</td>\n",
-       "      <td></td>\n",
-       "      <td>LISTED</td>\n",
-       "      <td>6883526</td>\n",
-       "      <td>Vattenfall</td>\n",
-       "      <td>https://media.licdn.com/dms/image/v2/D4D0BAQGT...</td>\n",
-       "      <td>2025-08-04T13:49:16.000Z</td>\n",
-       "      <td>2025-09-29T12:06:52.350Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DBA (M/F/D)</td>\n",
-       "      <td>SoSafe has the ambition to become the leading ...</td>\n",
-       "      <td>SoSafe · Madrid, Community of Madrid, Spain (O...</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/4292576067</td>\n",
-       "      <td>Madrid, Community of Madrid, Spain</td>\n",
-       "      <td>Skills: Amazon Web Services (AWS), Amazon Rela...</td>\n",
-       "      <td></td>\n",
-       "      <td>LISTED</td>\n",
-       "      <td>28825988</td>\n",
-       "      <td>SoSafe</td>\n",
-       "      <td>https://media.licdn.com/dms/image/v2/C4D0BAQGx...</td>\n",
-       "      <td>2025-08-28T20:51:45.000Z</td>\n",
-       "      <td>2025-09-29T12:07:51.615Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Business system analyst</td>\n",
-       "      <td>At Exness, we are not just a leading trading b...</td>\n",
-       "      <td>Exness · Limassol, Cyprus (Hybrid)</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/4272079301</td>\n",
-       "      <td>Limassol, Cyprus</td>\n",
-       "      <td>Skills: English, Programming Languages, +8 more</td>\n",
-       "      <td></td>\n",
-       "      <td>LISTED</td>\n",
-       "      <td>154611961</td>\n",
-       "      <td>Exness</td>\n",
-       "      <td>https://media.licdn.com/dms/image/v2/D4E0BAQEr...</td>\n",
-       "      <td>2025-07-25T13:52:28.000Z</td>\n",
-       "      <td>2025-09-29T12:29:25.092Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Data Privacy and Protection Consultant (h/m/x)</td>\n",
-       "      <td>In Experites, we seek privacy and data protect...</td>\n",
-       "      <td>EXPERTIS SPAIN · Three songs, Community of Mad...</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/4300652034</td>\n",
-       "      <td>Tres Cantos, Community of Madrid, Spain</td>\n",
-       "      <td>Skills: Data Privacy, Data Protection Act, +1 ...</td>\n",
-       "      <td></td>\n",
-       "      <td>LISTED</td>\n",
-       "      <td>154570714</td>\n",
-       "      <td>Experis España</td>\n",
-       "      <td>https://media.licdn.com/dms/image/v2/D4D0BAQFq...</td>\n",
-       "      <td>2025-09-18T08:31:10.000Z</td>\n",
-       "      <td>2025-09-29T12:07:11.626Z</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               Title  \\\n",
-       "0  Inhouse Consultant Information Security Awaren...   \n",
-       "1                            Senior Storage Engineer   \n",
-       "2                                        DBA (M/F/D)   \n",
-       "3                            Business system analyst   \n",
-       "4     Data Privacy and Protection Consultant (h/m/x)   \n",
-       "\n",
-       "                                         Description  \\\n",
-       "0  About Us\\nAs a self-financed family company, w...   \n",
-       "1  Vattenfall IT’s Data Centre department manages...   \n",
-       "2  SoSafe has the ambition to become the leading ...   \n",
-       "3  At Exness, we are not just a leading trading b...   \n",
-       "4  In Experites, we seek privacy and data protect...   \n",
-       "\n",
-       "                                 Primary Description  \\\n",
-       "0  Deichmann · Essen, North Rhine-Westphalia, Ger...   \n",
-       "1  Vattenfall · Stockholm, Stockholm County, Swed...   \n",
-       "2  SoSafe · Madrid, Community of Madrid, Spain (O...   \n",
-       "3                 Exness · Limassol, Cyprus (Hybrid)   \n",
-       "4  EXPERTIS SPAIN · Three songs, Community of Mad...   \n",
-       "\n",
-       "                                      Detail URL  \\\n",
-       "0  https://www.linkedin.com/jobs/view/4300643770   \n",
-       "1  https://www.linkedin.com/jobs/view/4279274865   \n",
-       "2  https://www.linkedin.com/jobs/view/4292576067   \n",
-       "3  https://www.linkedin.com/jobs/view/4272079301   \n",
-       "4  https://www.linkedin.com/jobs/view/4300652034   \n",
-       "\n",
-       "                                  Location  \\\n",
-       "0   Essen, North Rhine-Westphalia, Germany   \n",
-       "1      Stockholm, Stockholm County, Sweden   \n",
-       "2       Madrid, Community of Madrid, Spain   \n",
-       "3                         Limassol, Cyprus   \n",
-       "4  Tres Cantos, Community of Madrid, Spain   \n",
-       "\n",
-       "                                               Skill Insight Job State  \\\n",
-       "0    Skills: Information Security, Phishing, +8 more            LISTED   \n",
-       "1             Skills: English, Data Centers, +8 more            LISTED   \n",
-       "2  Skills: Amazon Web Services (AWS), Amazon Rela...            LISTED   \n",
-       "3    Skills: English, Programming Languages, +8 more            LISTED   \n",
-       "4  Skills: Data Privacy, Data Protection Act, +1 ...            LISTED   \n",
-       "\n",
-       "   Poster Id    Company Name  \\\n",
-       "0  714127132       Deichmann   \n",
-       "1    6883526      Vattenfall   \n",
-       "2   28825988          SoSafe   \n",
-       "3  154611961          Exness   \n",
-       "4  154570714  Experis España   \n",
-       "\n",
-       "                                        Company Logo  \\\n",
-       "0  https://media.licdn.com/dms/image/v2/C560BAQHX...   \n",
-       "1  https://media.licdn.com/dms/image/v2/D4D0BAQGT...   \n",
-       "2  https://media.licdn.com/dms/image/v2/C4D0BAQGx...   \n",
-       "3  https://media.licdn.com/dms/image/v2/D4E0BAQEr...   \n",
-       "4  https://media.licdn.com/dms/image/v2/D4D0BAQFq...   \n",
-       "\n",
-       "                 Created At                Scraped At  \n",
-       "0  2025-09-18T11:14:09.000Z  2025-09-29T11:53:40.552Z  \n",
-       "1  2025-08-04T13:49:16.000Z  2025-09-29T12:06:52.350Z  \n",
-       "2  2025-08-28T20:51:45.000Z  2025-09-29T12:07:51.615Z  \n",
-       "3  2025-07-25T13:52:28.000Z  2025-09-29T12:29:25.092Z  \n",
-       "4  2025-09-18T08:31:10.000Z  2025-09-29T12:07:11.626Z  "
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_json('jobs.json')\n",
     "# number of rows / samples\n",
@@ -656,23 +458,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "6da43fb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace specific metropolitan areas with their respective countries in the Location column\n",
+    "# ------------------------------------------------------------------\n",
+    "# 1. mapping dictionary\n",
+    "# ------------------------------------------------------------------\n",
     "df[\"Location\"] = df[\"Location\"].replace({\n",
-    "    \"Greater Madrid Metropolitan Area\": \"Spain\",\n",
-    "    \"Greater Paris Metropolitan Region\": \"France\",\n",
-    "    \"Greater Barcelona Metropolitan Area\": \"Spain\"\n",
+    "\n",
+    "    \"England Metropolitan Area\": \"United Kingdom\",\n",
+    "    \"Brno Metropolitan Area\": \"Czechia\", \"Plzen Metropolitan Area\": \"Czechia\", \"Prague Metropolitan Area\": \"Czechia\",\n",
+    "    \"Sofia Metropolitan Area\": \"Bulgaria\", \"Plovdiv Metropolitan Area\": \"Bulgaria\",\n",
+    "    \"Athens Metropolitan Area\": \"Greece\", \"Thessaloniki Metropolitan Area\": \"Greece\",\n",
+    "    \"Geneva Metropolitan Area\": \"Switzerland\", \"Basel Metropolitan Area\": \"Switzerland\",\n",
+    "    \"Zürich Metropolitan Area\": \"Switzerland\", \"Lugano Metropolitan Area\": \"Switzerland\",\n",
+    "    \"Lausanne Metropolitan Area\": \"Switzerland\", \"Lucerne Metropolitan Area\": \"Switzerland\",\n",
+    "    \"Sankt Gallen Metropolitan Area\": \"Switzerland\",\n",
+    "    \"Greater Turin Metropolitan Area\": \"Italy\", \"Italy Metropolitan Area\": \"Italy\",\n",
+    "    \"Greater Pavia Metropolitan Area\": \"Italy\", \"Greater Parma Metropolitan Area\": \"Italy\",\n",
+    "    \"Greater Naples Metropolitan Area\": \"Italy\", \"Greater Bergamo Metropolitan Area\": \"Italy\",\n",
+    "    \"Greater Brescia Metropolitan Area\": \"Italy\", \"Greater Verona Metropolitan Area\": \"Italy\",\n",
+    "    \"Greater Rennes Metropolitan Area\": \"France\", \"Greater Grenoble Metropolitan Area\": \"France\",\n",
+    "    \"Greater Bordeaux Metropolitan Area\": \"France\", \"Greater Montpellier Metropolitan Area\": \"France\",\n",
+    "    \"Greater Strasbourg Metropolitan Area\": \"France\", \"Greater Toulouse Metropolitan Area\": \"France\",\n",
+    "    \"Greater Nantes Metropolitan Area\": \"France\",\n",
+    "    \"Greater Malmö Metropolitan Area\": \"Sweden\", \"Greater Gothenburg Metropolitan Area\": \"Sweden\",\n",
+    "    \"Greater Helsingborg Metropolitan Area\": \"Sweden\", \"Greater Västerås Metropolitan Area\": \"Sweden\",\n",
+    "    \"Tarnow Metropolitan Area\": \"Poland\", \"Cracow Metropolitan Area\": \"Poland\",\n",
+    "    \"Kielce Metropolitan Area\": \"Poland\", \"Katowice Metropolitan Area\": \"Poland\",\n",
+    "    \"Lodz Metropolitan Area\": \"Poland\", \"Poznan Metropolitan Area\": \"Poland\",\n",
+    "    \"Zamosc Metropolitan Area\": \"Poland\",\n",
+    "    \"Greater Palma de Mallorca Metropolitan Area\": \"Spain\", \"Greater Bilbao Metropolitan Area\": \"Spain\",\n",
+    "    \"Greater Vigo Metropolitan Area\": \"Spain\", \"Greater Granada Metropolitan Area\": \"Spain\",\n",
+    "    \"Greater Valencia Metropolitan Area\": \"Spain\",\n",
+    "    \"Galway Metropolitan Area\": \"Ireland\",\n",
+    "    \"Kortrijk Metropolitan Area\": \"Belgium\", \"Antwerp Metropolitan Area\": \"Belgium\",\n",
+    "    \"Ghent Metropolitan Area\": \"Belgium\", \"Charleroi Metropolitan Area\": \"Belgium\",\n",
+    "    \"Greater Nuremberg Metropolitan Area\": \"Germany\",\n",
+    "    \"Pecs Metropolitan Area\": \"Hungary\",\n",
+    "    \"Ljubljana Metropolitan Area\": \"Slovenia\",\n",
+    "\n",
+    "    # === NEW ONES YOU JUST POSTED ===\n",
+    "    \"Hannover-Braunschweig-Göttingen-Wolfsburg Region\": \"Germany\",\n",
+    "    \"Brabantine City Row\": \"Netherlands\",\n",
+    "    \"Greater Dusseldorf Area\": \"Germany\",\n",
+    "    \"Greater Mulhouse Area\": \"France\",\n",
+    "    \"Linz-Wels-Steyr Area\": \"Austria\",\n",
+    "    \"Greater Alicante Area\": \"Spain\",\n",
+    "    \"Greater Funchal Area\": \"Portugal\",\n",
+    "    \"Greater Ipswich Area\": \"United Kingdom\",\n",
+    "    \"Greater La Coruña Area\": \"Spain\",\n",
+    "    \"Eindhoven Area\": \"Netherlands\",\n",
+    "    \"Greater Liverpool Area\": \"United Kingdom\",\n",
+    "    \"Greater Kecskemet Area\": \"Hungary\",\n",
+    "    \"Greater Leipzig Area\": \"Germany\",\n",
+    "    \"Utrecht Area\": \"Netherlands\",\n",
+    "    \"Greater Kiel Area\": \"Germany\",\n",
+    "    \"Greater Lyon Area\": \"France\",\n",
+    "    \"Greater Bielefeld Area\": \"Germany\",\n",
+    "    \"Greater Avignon Area\": \"France\",\n",
+    "    \"Greater Bern Area\": \"Switzerland\",\n",
+    "    \"Greater Hamburg Area\": \"Germany\",\n",
+    "    \"Greater Leeds Area\": \"United Kingdom\",\n",
+    "    \"Greater Metz Area\": \"France\",\n",
+    "    \"Greater Trencin Area\": \"Slovakia\",\n",
+    "    \"European Economic Area\": \"European Economic Area\",\n",
+    "    'Osnabrück Land': 'Germany',\n",
+    "    \"Greater Salzburg\": \"Austria\",\n",
+    "    \"Greater Sankt Polten\": \"Austria\",      # also works if written without ö\n",
+    "    \"Greater Graz\": \"Austria\",\n",
+    "    \"Greater Dublin\": \"Ireland\",\n",
+    "    \"Greater Nottingham\": \"United Kingdom\",\n",
     "})\n",
     "\n",
+    "# ------------------------------------------------------------------\n",
     "# Create a new column 'Country' by extracting the text after the last comma\n",
     "df[\"Country\"] = df[\"Location\"].apply(lambda x: x.split(\",\")[-1].strip() if \",\" in x else x.strip())\n",
     "\n",
     "# Exclude rows where Location contains \"EMEA\" or \"European Union\" (as these are not countries)\n",
     "df = df[~df[\"Location\"].str.contains(\"EMEA|European Union\", na=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea02fcd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check remaining \"area\"\n",
+    "country_df = df[df['Country'].str.contains('great', case=False, na=False)]\n",
+    "country_df['Country']"
    ]
   },
   {
@@ -685,12 +563,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "9ce73e00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_json('cleaned_linkedin_jobs.json')"
+    "df.to_json('cleaned_linkedin_jobs.json', orient='records', lines=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23cdada4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('cleaned_linkedin_jobs.csv', index=False)"
    ]
   }
  ],
